--- a/naledi/templates/spachainauth_store.html
+++ b/naledi/templates/spachainauth_store.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="mb-3">
                   <label for="lesee_id" class="form-label">Lessee ID/Passport</label>
-                  <input type="text" class="form-control" id="lesee_id" name="lesee_id">
+                  <input type="text" class="form-control" id="lesee_id_no" name="lesee_id_no">
                 </div>
               </div>
               <div class="mb-3">
