revised core/ __init__, and

--- a/naledi/adminchain/templates/admin_home.html
+++ b/naledi/adminchain/templates/admin_home.html
@@ -2,7 +2,7 @@
 
 {% block title %}Home- admin{% endblock %}
 <div class="landing-text text-center">
-    <h1>Weclome to Admin Home</h1>
+    <h1>Welcome to Admin Home</h1>
     <p>Your role as IT administrator </p>
 </div>
 
