--- a/naledi/static/css/progress.css
+++ b/naledi/static/css/progress.css
@@ -64,7 +64,7 @@
     background-color: green;
     border: 3px solid black;
   }
-  .started {
+  .in-progress {
     background-color: orange;
     border: 3px dashed black;
   }
